@@ -2651,7 +2651,8 @@ def PlayPV2Link(url):
     urlToPlay+=getPV2Auth()
     if '|' not in urlToPlay:
         urlToPlay+='|'
-    urlToPlay+='User-Agent: AppleCoreMedia/1.0.0.13D15 (iPhone; U; CPU OS 9_2_1 like Mac OS X; en_gb)'
+    import random
+    urlToPlay+='User-Agent: AppleCoreMedia/1.0.0.13D15 (iPhone; U; CPU OS 9_3_2%s like Mac OS X; en_gb)'%(binascii.b2a_hex(os.urandom(2))[:3])
 
 #    print 'urlToPlay',urlToPlay
     listitem = xbmcgui.ListItem( label = str(name), iconImage = "DefaultVideo.png", thumbnailImage = xbmc.getInfoImage( "ListItem.Thumb" ) )
