@@ -1,3 +1,6 @@
+[B]Version 4.3.2[/B]
+    -pv2 random us
+    
 [B]Version 4.3.1[/B]
     -Yp source added in Pakistani, Indian and Punjabi channels
     
